[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphexosuit-workspace"
version = "0.1.0"
description = "GraphExosuit - lightweight LangGraph runtime wrapper with CLI and web interfaces"
readme = "README.md"
license = { text = "MIT" }

[tool.uv.workspace]
members = [
    "graphexosuit-core",
    "graphexosuit-layer-cli",
    "graphexosuit-layer-backend",
]
