[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphexosuit-layer-backend"
version = "0.1.0"
description = "FastAPI web interface for graphexosuit LangGraph workflows"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "graphexosuit-core>=0.1.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
]

[project.scripts]
graphexosuitweb = "graphexosuit.layer.backend._server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["graphexosuit"]
