[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphexosuit-layer-cli"
version = "0.1.0"
description = "Typer CLI for graphexosuit LangGraph workflows"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "graphexosuit-core>=0.1.0",
    "typer>=0.9.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
]

[project.scripts]
graphexosuit = "graphexosuit.layer.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["graphexosuit"]
