[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphexosuit"
version = "0.1.0"
description = "Lightweight, flexible framework for executing LangGraphs from web or CLI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "langgraph>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["graphexosuit*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
