[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphexosuitweb"
version = "0.1.0"
description = "FastAPI web interface for graphexosuit LangGraph workflows"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "graphexosuit>=0.1.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
]

[project.scripts]
graphexosuitweb = "graphexosuitweb.app:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["graphexosuitweb*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
