[project]
name = "interrupt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "graphexosuit-layer-cli @ file:///home/micro/repos/trusted/graphexosuit/graphexosuit-layer-cli",
    "graphexosuit-layer-backend @ file:///home/micro/repos/trusted/graphexosuit/graphexosuit-layer-backend",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langchain-classic>=1.0.8",
    "uvicorn>=0.50.2",
]
